Alex Michelon/Módulo 09-Programação Ciência de Dados - Trabalho Final: v1.1: Adição de README.md, ajuste em telas de exibição e correção da função que trata nbomes de colunas com caracteres estranhos

--- a/09-programacao_ciencias_de_dados/trabalho_final/src/templates/database_describe_info.html
+++ b/09-programacao_ciencias_de_dados/trabalho_final/src/templates/database_describe_info.html
@@ -42,6 +42,11 @@
             #formulario_agrupamento {
                 float:right;
             }
+            #div-finfos{
+                text-align: left;
+                font-size: 20px;
+                padding: 10px 10px 10px 10px;
+            }
 
         </style>
 
@@ -52,8 +57,15 @@
 
         <div class="container">
             <div id="geral">
-                <h2 class='main_title'>Base setada</h2> <p style="text-align: left; font-size: 20px;">{{name_database}}</p>
-                <span style="font-weight: bold;">Total de registros da base: </span> {{ database|length }} recuperados.
+                <div id="div-finfos">
+                    <span style="font-weight: bold;">Base setada: </span> {{ name_database }}.
+                </div>
+                <div id="div-finfos">
+                    <span style="font-weight: bold;">Total de registros da base: </span> {{ database|length }} recuperados.
+                </div>
+                <div id="div-finfos">
+                    <span style="font-weight: bold;">Total de Colunas: </span> {{ database.columns|length }}.
+                </div>
             </div>
 
             <div id="div-forms">
