--- a/09-programacao_ciencias_de_dados/trabalho_final/src/templates/form_search_group_by.html
+++ b/09-programacao_ciencias_de_dados/trabalho_final/src/templates/form_search_group_by.html
@@ -93,7 +93,7 @@
     });
 </script>
 
-<form method="POST" action="/database/search_group_by" target="_blank">
+<form method="POST" action="/database/search_group_by">
     <h2>Filtros de Seleção</h2>
     <div id="filters_search" class="div-form">
         <label>Coluna</label> 
